--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site
-title:              Massively
-bio:                'Jekyll version of the Massively theme by HTML5UP'
-description:        "Jekyll version of the Massively theme by HTML5UP"
-locale:             en_US
+title:             Medical Data Lab
+bio:                'Mina Kim'
+description:        "Let's gogogogo"
+locale:             ko_KR
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
@@ -36,14 +36,14 @@ disqus_shortname:   default
 # Social
 analytics-id:       "default"
 twitter:            default
-facebook:           default
-instagram:          default
-github:             default
+facebook:           kimminyee
+instagram:          mina_minimina
+github:             rpmina
 
 # personal
-location:           Los Angeles, CA
-phone:              310-318-5555
-email:              info@default.com
+location:           Seoul, KR
+phone:              
+email:              rpminakim@gmail.com
 
 # Gems
 gems:
